# voiceforge

./: .Deployment:.swp  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  RESPONSIBLE_USE.md  ROADMAP.md  SECURITY.md  modal_app.py  pyproject.toml  requirements-chatterbox.txt  requirements-cosyvoice.txt  requirements-f5.txt  requirements-fish.txt  requirements-indextts.txt  requirements-openvoice.txt  requirements-qwen3-asr.txt  requirements-qwen3.txt  requirements-rvc.txt  requirements-voxcpm2.txt  requirements-xtts.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  engine_request.yml  feature_request.yml  model_licensing.yml
.github/workflows/: ci.yml
app/: audio_preprocess.py  benchmarking.py  config.py  db.py  db_models.py  engine_readiness.py  logging_setup.py  main.py  metrics.py  middleware.py  persistence.py  runtime_device.py  schemas.py  security.py  storage.py  watermark.py
app/api/: engines.py  events.py  metrics.py  providers.py  synth.py  voices.py
app/audio_intelligence/: __init__.py  base.py  qwen3_asr.py
app/engines/: asr.py  base.py  chatterbox.py  chatterbox_daemon.py  cosyvoice_3.py  f5_tts.py  fish_speech.py  indextts_2.py  openvoice_v2.py  qwen3_tts.py  registry.py  rvc.py  rvc_worker_client.py  subprocess_env.py  voxcpm2.py  xtts_v2.py  (+2 more)
benchmarks/: prompts.v1.jsonl
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml
docs/: BENCHMARKING.md  CONSENT.md  DEMO_CAPTURE.md  ENGINES.md  ENGINE_LICENSING.md  EXPERIMENTAL_STUDIO.md  FIRST_CLONE.md  GITHUB_METADATA.md  REEL_STUDIO.md  SELF_HOSTING.md  WATERMARKING.md  deploy-kaggle.md  deploy-lightning.md  deploy-modal.md  local-python-setup.md
scripts/: benchmark_quality.py  benchmark_suite.py  chatterbox_worker.py  cosyvoice_worker.py  download_models.py  e2e_smoke_test.py  indextts_worker.py  qwen3_asr_worker.py  rvc_worker.py  voxcpm2_worker.py
tests/: conftest.py  test_asr_helpers.py  test_audio_preprocess.py  test_auth.py  test_benchmarking.py  test_download_models.py  test_enabled_engines.py  test_engines_api.py  test_healthz.py  test_metrics.py  test_provider_manifests.py  test_runtime_device.py  test_runtime_safety.py  test_storage_preprocess.py  test_studio_ui.py  test_subprocess_env.py  test_synth_api.py  test_voices_api.py  test_watermark.py  test_watermark_api.py
(+7 files in other folders)
